28.sep (ws)
      - linked parts: link ties
      - fixed #7311: dragging tied notes and removing tie gives weird result
      - fixed #7295: margin between clef and first not too narrow
      - fixed #7174: linked parts are not closed when the main score is closed
27.sep (ws)
      - fixed #7294: chord text of staff != 1 shown in wrong position
      - fixed #7292: handling of backward compatibility of mscz files
      - moved Lyrics from Segment to ChordRest. This allows for lyrics on
        grace notes (#6577)
26.sep (ws)
      - fix clef changes
25.sep (ws)
      - implemented #6925: Make "reset stretch" work on the selected measure only
      - fixed #7225: [trunk] SIGABORT when loading a score with parenthesized accidental(s)
      - fixed #7227: [trunk] Wrong X coord in symbol placement
      - updated accidental handling
     (db)
      - fix #6649: Transposition when creating a score from a template
24.sep (ws)
      - removed drum palette, replaced by a drum tools dock widget similar
        to text edit tools
      (la)
      - fix #7233: Transpose by diminished second doesn't work
23.sep (la)
      - Apply patch for ARM qreal bug
22.sep (ws)
      - add default soundfont to preferences
      - soundfonts are now associated with Score()
      - implement multiple soundfonts
      - added modified mscore-20.ttf from Miwarre
      (la)
      - fix #7211: Copy/Paste notes over rest of diff. durations in staves
21.sep (ws)
      - expose staff line width in style dialog
      (la)
      - fix #7142: Crescendo & delete measures problems (MusicXML export)
      - fix #7197: MuseScore fails to open MSCZ files with capitals
      - fix #6932: Changing notehead of a breve crash
      - add access to DPI, notehead, note bounding box and note position from plugin framework
            (Patch by Mikhail Eliseev)
20.sep (ws)
      - tablature editing:
            - "up/down"       chromatic pitch change (same as for pitched staff)